--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <!--title keywords description 请改为自己的-->
 <title>siteproxy代理 - 通向墙外的世界</title>
 <meta name="keywords" content="bituplink,导航,网址"/>
-<meta name="description" content="本代理一定会被墙,时间不定,请记住开源地址(不会被墙),以便找回新的网址:"/>
-<a href="https://github.com/netptop/siteproxy"> https://github.com/netptop/siteproxy </a>
+<!-- <meta name="description" content="本代理一定会被墙,时间不定,请记住开源地址(不会被墙),以便找回新的网址:"/> -->
+<!-- <a href="https://github.com/netptop/siteproxy"> https://github.com/netptop/siteproxy </a> -->
 
 <!--网站favicon可以没有或者改为自己的-->
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.png"/>
